# Think-Tanks-DC

./: .gitignore  Methodology  README.md  index.html  package-lock.json  package.json  vite.config.ts
dc_network_v2/: .gitignore  README.md  pyproject.toml  requirements.txt
dc_network_v2/configs/: pipeline.json  scoring.json
dc_network_v2/data/raw/: alias_table.csv  sample_funding.csv  sample_organizations.csv  sample_personnel.csv
dc_network_v2/src/dc_network/: __init__.py  cli.py  config.py  entities.py  graph.py  io.py  logging_utils.py  pipeline.py  relations.py  reporting.py  scoring.py  storage.py  validation.py
dc_network_v2/tests/: test_pipeline_contracts.py
src/: App.tsx  index.css
src/components/: ChordPanel.tsx  DarkMoneyBadge.tsx  HeatmapPanel.tsx  NetworkPanel.tsx  PanelWrapper.tsx  SankeyPanel.tsx  TimelinePanel.tsx  Tooltip.tsx  TreemapPanel.tsx
src/data/: donors.ts  supplemental.ts  thinkTanks.ts  transactions.ts  types.ts
src/utils/: colorScales.ts  dataProcessing.ts  useResizeAwareDraw.ts
